--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 
+docker_package_name: "docker-ce"
+
 # Map of Kubernetes minor version to RKE Kubernetes version
 kubernetes_supported_versions:
   "1.19": v1.19.6-rancher1-1
