--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 
 docker_package_name: "docker-ce"
+docker_group: "docker"
 
 # Map of Kubernetes minor version to RKE Kubernetes version
 kubernetes_supported_versions:
